--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,13 @@ dependencies {
     def retrofit_version = '2.9.0'
     def coroutines_version = "1.6.4"
     def hilt_version = "2.44.2"
-    def mockFit_version = "1.1.0"
+    def mockFit_version = "2.0.0"
     def robolectric_version = '4.3'
+
+    implementation project(":domain")
+    implementation project(":data")
+
+    implementation "androidx.paging:paging-compose:1.0.0-alpha20"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
