--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -8,4 +8,6 @@ java {
 }
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+    implementation "androidx.paging:paging-common:3.2.0"
 }
