--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,84 +1,53 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
-    id 'kotlin-parcelize'
-    id 'com.google.dagger.hilt.android'
+    alias(libs.plugins.my.android.application)
+    alias(libs.plugins.my.android.application.compose)
+    alias(libs.plugins.my.android.hilt)
+    alias(libs.plugins.kotlinAndroid)
 }
 
 android {
-    namespace 'ir.miare.androidcodechallenge'
-    compileSdk 33
-
     defaultConfig {
-        applicationId "ir.miare.androidcodechallenge"
-        minSdk 21
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        applicationId = "ir.miare.androidcodechallenge"
+        versionCode = 1
+        versionName = "0.0.1"
+        vectorDrawables {
+            useSupportLibrary = true
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    kotlinOptions {
-        jvmTarget = '17'
+
+
+    packaging {
+        resources {
+            excludes.add("/META-INF/{AL2.0,LGPL2.1}")
+        }
     }
 
-    buildFeatures {
-        viewBinding true
-    }
+    namespace = "ir.miare.androidcodechallenge"
 }
 
 dependencies {
-    def lifecycle_version = "2.5.1"
-    def jackson_version = '2.13.0'
-    def retrofit_version = '2.9.0'
-    def coroutines_version = "1.6.4"
-    def hilt_version = "2.44.2"
-    def mockFit_version = "2.0.0"
-    def robolectric_version = '4.3'
 
-    implementation project(":domain")
-    implementation project(":data")
+    implementation(project(":core:designsystem"))
+    implementation(project(":core:ui"))
+    implementation(project(":domain"))
+    implementation(project(":data"))
 
-    implementation "androidx.paging:paging-compose:1.0.0-alpha20"
-
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "androidx.fragment:fragment-ktx:1.5.5"
-
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation "org.robolectric:robolectric:$robolectric_version"
-    testImplementation "org.robolectric:shadows-multidex:$robolectric_version"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jackson_version"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-joda:$jackson_version"
-    implementation("com.fasterxml.jackson.datatype:jackson-datatype-json-org:$jackson_version") {
-        exclude group: 'org.json', module: 'json'
-    }
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-jackson:$retrofit_version"
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
-    implementation "com.github.javaherisaber.MockFit:runtime:$mockFit_version"
-    kapt "com.github.javaherisaber.MockFit:compiler:$mockFit_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    implementation(libs.material)
+    implementation(libs.constraintlayout)
+    implementation(libs.androidx.activity.compose)
+    implementation(libs.androidx.appcompat)
+    implementation(libs.androidx.core.ktx)
+    implementation(libs.androidx.core.splashscreen)
+    implementation(libs.androidx.compose.runtime)
+    implementation(libs.androidx.lifecycle.runtimeCompose)
+    implementation(libs.androidx.compose.runtime.tracing)
+    implementation(libs.androidx.compose.material3.windowSizeClass)
+    implementation(libs.androidx.hilt.navigation.compose)
+    implementation(libs.androidx.navigation.compose)
+    implementation(libs.androidx.window.manager)
+    implementation(libs.androidx.profileinstaller)
+    implementation(libs.kotlinx.coroutines.guava)
+    implementation(libs.coil.kt)
+    implementation(libs.paging.runtime)
+    implementation(libs.paging.compose)
 }
