--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,35 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
 
+        // Android Build Server
+        maven { url = uri("../nowinandroid-prebuilts/m2repository") }
+        maven {
+            url = uri("https://mvnrepository.com/artifact/com.android.tools.lint/lint-gradle-api")
+        }
+        maven {
+            url = uri("https://maven.google.com/")
+        }
+
+        flatDir {
+            dirs("app/libs")
+        }
+    }
+    dependencies {
+
+    }
+}
+
+// Lists all plugins used throughout the project without applying them.
 plugins {
-    id 'com.android.application' version '8.1.2' apply false
-    id 'com.android.library' version '8.1.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
-    id 'com.google.dagger.hilt.android' version '2.48.1' apply false
-    id 'org.jetbrains.kotlin.jvm' version '1.9.10' apply false
-    id 'com.google.devtools.ksp' version '1.9.10-1.0.13' apply false
+    alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.kotlin.jvm) apply false
+    alias(libs.plugins.kotlin.serialization) apply false
+//    alias(libs.plugins.firebase.perf) apply false
+    alias(libs.plugins.hilt) apply false
+    alias(libs.plugins.ksp) apply false
+    alias(libs.plugins.kotlinAndroid) apply false
+    alias(libs.plugins.android.library) apply false
+
 }
