--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,31 +1,69 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
     id 'com.google.devtools.ksp'
 }
 
 android {
-    namespace 'ir.miare.androidcodechallenge'
+    namespace 'ir.miare.data'
     compileSdk 33
 
     defaultConfig {
         minSdk 21
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 }
 
 dependencies {
 
-    implementation project(":domain")
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.okhttp3:okhttp:4.10.0"
-    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.14.+"
-    implementation "com.squareup.retrofit2:converter-jackson:2.9.0"
+    def mockFit_version = "1.1.0"
+    implementation "com.github.javaherisaber.MockFit:runtime:$mockFit_version"
+    kapt "com.github.javaherisaber.MockFit:compiler:$mockFit_version" // for Kotlin (make sure to include kapt plugin also)
+    annotationProcessor "com.github.javaherisaber.MockFit:compiler:$mockFit_version"
+
+    // Kotlin stdlib
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.24"
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+
+    // Room
     implementation "androidx.room:room-runtime:2.5.2"
     ksp 'androidx.room:room-compiler:2.6.0'
     implementation "androidx.room:room-ktx:2.5.2"
+
+    // Paging3
     implementation "androidx.paging:paging-runtime-ktx:3.2.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+
+
+    // Retrofit + Jackson
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-jackson:2.9.0"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.15.2"
+    implementation "androidx.annotation:annotation-experimental:1.4.0"
+
+    implementation "androidx.room:room-paging:2.6.0"
+
+
+    // OkHttp
+    implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.12.0"
+
+
+    // Hilt (for DI in repo impl)
+    implementation "com.google.dagger:hilt-android:2.51"
+    kapt "com.google.dagger:hilt-android-compiler:2.51"
+
+    // Domain module
+    implementation project(":domain")
 }
