--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@
 # https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
 # org.gradle.parallel=true
 #Mon Aug 11 17:40:01 IRST 2025
-android.enableJetifier=true
+android.enableJetifier=false
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 kotlin.code.style=official
