--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,9 @@
 pluginManagement {
+    includeBuild("build-logic")
     repositories {
-        gradlePluginPortal()
         google()
         mavenCentral()
+        gradlePluginPortal()
         maven { url = uri("https://jitpack.io") }
     }
 }
@@ -15,8 +16,4 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "AndroidCodeChallenge"
-include ':app' , ':data', ':domain'
-include ':domain:lib'
-include ':domain:'
-include ':domain:'
-include ':data:'
+include ':app' , ':data', ':domain', ':core:ui', ':core:designsystem' , ':core:common'
