--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,16 @@ android.enableJetifier=false
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 kotlin.code.style=official
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding\=UTF-8
+# Increase JVM heap size
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# Enable Gradle daemon and parallel builds
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+
+kapt.incremental.apt=false
+kapt.use.worker.api=false
+
+# Enable incremental dex
+#android.enableIncrementalDesugaring=false
