--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
     implementation "androidx.paging:paging-common:3.2.0"
+    implementation "javax.inject:javax.inject:1"
 }
